--- a/index.html
+++ b/index.html
@@ -18,15 +18,21 @@
                 <input type="text" placeholder="Enter your username">
                 <label for="">Password</label>
                 <input type="text" placeholder="Enter your Password">
-                <span>
-                    <input type="checkbox" id="check">
-                    <label for="check">Remember Me</label>
-                </span>
-                <a href="">Forgot password?</a>
+                <div class="checkbox">
+                    <span>
+                        <input type="checkbox" id="check">
+                        <label for="">Remember Me</label>
+                    </span>
+                    <a href="">Forgot password?</a>
+                </div>
             </div>
             <button>Login</button>
-            <p>Or</p>
-            <button>Signup with Google</button>
+            <div id="line-txt">
+                <div class="line"></div>
+                <p id="or">or</p>
+                <div class="line"></div>
+            </div>
+            <button id="g-btn"><img src="assets/google.png" alt="">Signup with Google</button>
             <p>Don't have an account? <a href="">Sign Up</a></p>
         </div>
         <div class="bg"></div>
