--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="">Forgot password?</a>
                 </div>
             </div>
-            <button>Login</button>
+            <button id="l-btn">Login</button>
             <div id="line-txt">
                 <div class="line"></div>
                 <p id="or">or</p>
@@ -35,7 +35,9 @@
             <button id="g-btn"><img src="assets/google.png" alt="">Signup with Google</button>
             <p>Don't have an account? <a href="">Sign Up</a></p>
         </div>
-        <div class="bg"></div>
+        <div class="bg">
+            <h1>Welcome Back!</h1>
+        </div>
     </div>
 </body>
 </html>
